# kpi

./: .gitignore  LICENSE  README.md
qlib/kpi/: .dignore  kpi.q
qlib/kpi/cpp/: CMakeLists.txt  kpi.cpp  kpi.def
qlib/kpi/cpp/kdb/: k.h  kdb.hpp  kundef.hpp
qlib/kpi/main_test/: 99.q  kpi_test.xlsx
qlib/kpi/test/: 001.q
